--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Issue Tracker Boilerplate",
   "main": "server.js",
   "scripts": {
-    "serve-db": "json-server --watch db.json --port 3001",
+    "serve-db": "json-server --watch db.json --port 3001 --id _id",
     "start": "node server.js",
     "test": "mocha --timeout 5000 --recursive --exit --ui tdd tests/"
   },
@@ -15,7 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "0.17.4",
     "mocha": "^8.1.3"
   },
   "repository": {
