--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Issue Tracker Boilerplate",
   "main": "server.js",
   "scripts": {
-    "serve-db": "json-server --watch db.json --port 3001 --id _id",
+    "db": "json-server --watch db.json --port 3001 --id _id",
     "start": "node server.js",
     "test": "mocha --timeout 5000 --recursive --exit --ui tdd tests/"
   },
